backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLADOBLE
    COMILLASIMPLE
    CORDER
    CORIZQ
    RANY
    RBREAK
    RCONCAT
    RCONTINUE
    RINTERFACE
    RNULL
    RRETURN
    RSPLIT
    RTOEXPONENTIAL
    RTOFIXED
    RTOLOWERCASE
    RTOSTRING
    RTOUPPERCASE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir puntoycoma
Rule 5     instruccion -> declaracion_normal puntoycoma
Rule 6     instruccion -> asignacion puntoycoma
Rule 7     instruccion -> condicional_ifs puntoycoma
Rule 8     instruccion -> cliclo_for puntoycoma
Rule 9     instruccion -> ciclo_while puntoycoma
Rule 10    instruccion -> funcion puntoycoma
Rule 11    instruccion -> llamada_funcion puntoycoma
Rule 12    puntoycoma -> PTCOMA
Rule 13    puntoycoma -> <empty>
Rule 14    imprimir -> RCONSOLE PUNTO RLOG PARI listaExpresion PARD
Rule 15    listaExpresion -> listaExpresion COMA expresion
Rule 16    listaExpresion -> expresion
Rule 17    declaracion_normal -> RLET ID DPUNTOS tipo IGUAL expresion
Rule 18    declaracion_normal -> RLET ID IGUAL expresion
Rule 19    asignacion -> ID IGUAL expresion
Rule 20    condicional_ifs -> RIF condicional_if
Rule 21    condicional_if -> PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 22    condicional_if -> PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 23    condicional_if -> PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE RIF condicional_if
Rule 24    cliclo_for -> RFOR PARI declaracion_for PTCOMA expresion PTCOMA expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 25    cliclo_for -> RFOR PARI RLET ID ROF expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 26    declaracion_for -> declaracion_normal
Rule 27    declaracion_for -> ID
Rule 28    ciclo_while -> RWHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 29    funcion -> RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
Rule 30    llamada_funcion -> ID PARI PARD
Rule 31    tipo -> RSTRING
Rule 32    tipo -> RNUMBER
Rule 33    tipo -> RBOOLEAN
Rule 34    expresion -> expresion MAS expresion
Rule 35    expresion -> expresion MENOS expresion
Rule 36    expresion -> expresion POR expresion
Rule 37    expresion -> expresion DIV expresion
Rule 38    expresion -> expresion MOD expresion
Rule 39    expresion -> expresion POTENCIA expresion
Rule 40    expresion -> expresion COMPARE expresion
Rule 41    expresion -> expresion DIFERENTE expresion
Rule 42    expresion -> expresion MAYOR expresion
Rule 43    expresion -> expresion MENOR expresion
Rule 44    expresion -> expresion MAYORIGUAL expresion
Rule 45    expresion -> expresion MENORIGUAL expresion
Rule 46    expresion -> expresion AND expresion
Rule 47    expresion -> expresion OR expresion
Rule 48    expresion -> MENOS expresion
Rule 49    expresion -> NOT expresion
Rule 50    expresion -> PARI expresion PARD
Rule 51    expresion -> ID
Rule 52    expresion -> ENTERO
Rule 53    expresion -> DECIMAL
Rule 54    expresion -> CADENA
Rule 55    expresion -> RTRUE
Rule 56    expresion -> RFALSE
Rule 57    expresion -> expresion MAS MAS
Rule 58    expresion -> expresion MENOS MENOS

Terminals, with rules where they appear

AND                  : 46
CADENA               : 54
COMA                 : 15
COMILLADOBLE         : 
COMILLASIMPLE        : 
COMPARE              : 40
CORDER               : 
CORIZQ               : 
DECIMAL              : 53
DIFERENTE            : 41
DIV                  : 37
DPUNTOS              : 17
ENTERO               : 52
ID                   : 17 18 19 25 27 29 30 51
IGUAL                : 17 18 19
LLAVEDER             : 21 22 22 23 24 25 28 29
LLAVEIZQ             : 21 22 22 23 24 25 28 29
MAS                  : 34 57 57
MAYOR                : 42
MAYORIGUAL           : 44
MENOR                : 43
MENORIGUAL           : 45
MENOS                : 35 48 58 58
MOD                  : 38
NOT                  : 49
OR                   : 47
PARD                 : 14 21 22 23 24 25 28 29 30 50
PARI                 : 14 21 22 23 24 25 28 29 30 50
POR                  : 36
POTENCIA             : 39
PTCOMA               : 12 24 24
PUNTO                : 14
RANY                 : 
RBOOLEAN             : 33
RBREAK               : 
RCONCAT              : 
RCONSOLE             : 14
RCONTINUE            : 
RELSE                : 22 23
RFALSE               : 56
RFOR                 : 24 25
RFUNCTION            : 29
RIF                  : 20 23
RINTERFACE           : 
RLET                 : 17 18 25
RLOG                 : 14
RNULL                : 
RNUMBER              : 32
ROF                  : 25
RRETURN              : 
RSPLIT               : 
RSTRING              : 31
RTOEXPONENTIAL       : 
RTOFIXED             : 
RTOLOWERCASE         : 
RTOSTRING            : 
RTOUPPERCASE         : 
RTRUE                : 55
RWHILE               : 28
error                : 

Nonterminals, with rules where they appear

asignacion           : 6
ciclo_while          : 9
cliclo_for           : 8
condicional_if       : 20 23
condicional_ifs      : 7
declaracion_for      : 24
declaracion_normal   : 5 26
expresion            : 15 16 17 18 19 21 22 23 24 24 25 28 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 50 57 58
funcion              : 10
imprimir             : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 21 22 22 23 24 25 28 29
listaExpresion       : 14 15
llamada_funcion      : 11
puntoycoma           : 4 5 6 7 8 9 10 11
tipo                 : 17

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir puntoycoma
    (5) instruccion -> . declaracion_normal puntoycoma
    (6) instruccion -> . asignacion puntoycoma
    (7) instruccion -> . condicional_ifs puntoycoma
    (8) instruccion -> . cliclo_for puntoycoma
    (9) instruccion -> . ciclo_while puntoycoma
    (10) instruccion -> . funcion puntoycoma
    (11) instruccion -> . llamada_funcion puntoycoma
    (14) imprimir -> . RCONSOLE PUNTO RLOG PARI listaExpresion PARD
    (17) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (18) declaracion_normal -> . RLET ID IGUAL expresion
    (19) asignacion -> . ID IGUAL expresion
    (20) condicional_ifs -> . RIF condicional_if
    (24) cliclo_for -> . RFOR PARI declaracion_for PTCOMA expresion PTCOMA expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (25) cliclo_for -> . RFOR PARI RLET ID ROF expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (28) ciclo_while -> . RWHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (29) funcion -> . RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (30) llamada_funcion -> . ID PARI PARD

    RCONSOLE        shift and go to state 12
    RLET            shift and go to state 13
    ID              shift and go to state 14
    RIF             shift and go to state 15
    RFOR            shift and go to state 16
    RWHILE          shift and go to state 17
    RFUNCTION       shift and go to state 18

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    asignacion                     shift and go to state 6
    condicional_ifs                shift and go to state 7
    cliclo_for                     shift and go to state 8
    ciclo_while                    shift and go to state 9
    funcion                        shift and go to state 10
    llamada_funcion                shift and go to state 11

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir puntoycoma
    (5) instruccion -> . declaracion_normal puntoycoma
    (6) instruccion -> . asignacion puntoycoma
    (7) instruccion -> . condicional_ifs puntoycoma
    (8) instruccion -> . cliclo_for puntoycoma
    (9) instruccion -> . ciclo_while puntoycoma
    (10) instruccion -> . funcion puntoycoma
    (11) instruccion -> . llamada_funcion puntoycoma
    (14) imprimir -> . RCONSOLE PUNTO RLOG PARI listaExpresion PARD
    (17) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (18) declaracion_normal -> . RLET ID IGUAL expresion
    (19) asignacion -> . ID IGUAL expresion
    (20) condicional_ifs -> . RIF condicional_if
    (24) cliclo_for -> . RFOR PARI declaracion_for PTCOMA expresion PTCOMA expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (25) cliclo_for -> . RFOR PARI RLET ID ROF expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (28) ciclo_while -> . RWHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (29) funcion -> . RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (30) llamada_funcion -> . ID PARI PARD

    $end            reduce using rule 1 (init -> instrucciones .)
    RCONSOLE        shift and go to state 12
    RLET            shift and go to state 13
    ID              shift and go to state 14
    RIF             shift and go to state 15
    RFOR            shift and go to state 16
    RWHILE          shift and go to state 17
    RFUNCTION       shift and go to state 18

    instruccion                    shift and go to state 19
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    asignacion                     shift and go to state 6
    condicional_ifs                shift and go to state 7
    cliclo_for                     shift and go to state 8
    ciclo_while                    shift and go to state 9
    funcion                        shift and go to state 10
    llamada_funcion                shift and go to state 11

state 3

    (3) instrucciones -> instruccion .

    RCONSOLE        reduce using rule 3 (instrucciones -> instruccion .)
    RLET            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 20

state 5

    (5) instruccion -> declaracion_normal . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 22

state 6

    (6) instruccion -> asignacion . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 23

state 7

    (7) instruccion -> condicional_ifs . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 24

state 8

    (8) instruccion -> cliclo_for . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 25

state 9

    (9) instruccion -> ciclo_while . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 26

state 10

    (10) instruccion -> funcion . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 27

state 11

    (11) instruccion -> llamada_funcion . puntoycoma
    (12) puntoycoma -> . PTCOMA
    (13) puntoycoma -> .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (puntoycoma -> .)
    RLET            reduce using rule 13 (puntoycoma -> .)
    ID              reduce using rule 13 (puntoycoma -> .)
    RIF             reduce using rule 13 (puntoycoma -> .)
    RFOR            reduce using rule 13 (puntoycoma -> .)
    RWHILE          reduce using rule 13 (puntoycoma -> .)
    RFUNCTION       reduce using rule 13 (puntoycoma -> .)
    $end            reduce using rule 13 (puntoycoma -> .)
    LLAVEDER        reduce using rule 13 (puntoycoma -> .)

    puntoycoma                     shift and go to state 28

state 12

    (14) imprimir -> RCONSOLE . PUNTO RLOG PARI listaExpresion PARD

    PUNTO           shift and go to state 29


state 13

    (17) declaracion_normal -> RLET . ID DPUNTOS tipo IGUAL expresion
    (18) declaracion_normal -> RLET . ID IGUAL expresion

    ID              shift and go to state 30


state 14

    (19) asignacion -> ID . IGUAL expresion
    (30) llamada_funcion -> ID . PARI PARD

    IGUAL           shift and go to state 31
    PARI            shift and go to state 32


state 15

    (20) condicional_ifs -> RIF . condicional_if
    (21) condicional_if -> . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (22) condicional_if -> . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (23) condicional_if -> . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE RIF condicional_if

    PARI            shift and go to state 34

    condicional_if                 shift and go to state 33

state 16

    (24) cliclo_for -> RFOR . PARI declaracion_for PTCOMA expresion PTCOMA expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (25) cliclo_for -> RFOR . PARI RLET ID ROF expresion PARD LLAVEIZQ instrucciones LLAVEDER

    PARI            shift and go to state 35


state 17

    (28) ciclo_while -> RWHILE . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER

    PARI            shift and go to state 36


state 18

    (29) funcion -> RFUNCTION . ID PARI PARD LLAVEIZQ instrucciones LLAVEDER

    ID              shift and go to state 37


state 19

    (2) instrucciones -> instrucciones instruccion .

    RCONSOLE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
